<resources>
    <string name="app_name">My Notes</string>

    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hello_admin">Hello Admin!</string>
    <string name="sign_in_here">Sign in Here!</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="name">Name</string>
    <string name="xyz">XYZ</string>
    <string name="email">Email</string>
    <string name="example_example_com">example@example.com</string>
    <string name="pass_hint">********</string>
    <string name="policy">Creating an account means you\'re okay with our team Teams of Service and our privacy policy</string>
    <string name="create_an_account">Create an Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="create_an_account_to_get_started">Create an account to get started.</string>
    <string name="new_user">New User?</string>
    <string name="add_note">Add Note</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="edit_note">Edit Note</string>
    <string name="log_out">Log Out</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="reset_your_password">Reset your password?</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="send">Send</string>
    <string name="note">Note</string>
    <string name="heading">Heading</string>
    <string name="date">Date</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>