<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/add_note"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/addHeadingText"
        android:layout_width="match_parent"
        android:paddingStart="9dp"
        android:paddingEnd="9dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/heading"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/border_layout_1"/>

    <EditText
        android:id="@+id/addNoteText"
        android:layout_width="match_parent"
        android:paddingStart="9dp"
        android:paddingEnd="9dp"
        android:layout_height="52dp"
        android:hint="@string/note"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/border_layout_1"/>

</LinearLayout>