<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/image"
            android:src="@drawable/notes"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/reset_your_password"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailForgot"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/enter_your_registered_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/border_layout_1"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:gravity="center"
            android:layout_marginTop="25dp" />

        <Button
            android:id="@+id/emailSent"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/send"
            android:background="@drawable/border_layout_1"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />


    </LinearLayout>

</LinearLayout>